 <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.submission.SubmitActivity"
    android:background="@drawable/launch"
    >

    <include
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/wrap_fn_ln"
        android:layout_below="@+id/toolbar"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/first_name"
            android:hint="@string/first_name"
            android:background="@drawable/ic_input_border"
            android:layout_marginEnd="1dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/last_name"
            android:layout_marginStart="1dp"
            android:hint="@string/last_name"
            android:background="@drawable/ic_input_border"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/wrap_fn_ln"
        android:layout_marginTop="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/email_address"
        android:hint="@string/email_address"
        android:background="@drawable/ic_input_border"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/git_url"
        android:layout_below="@+id/email_address"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/git_url"
        android:background="@drawable/ic_input_border"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/submit_btn"
        android:hint="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/git_url"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/ic_submit_btn_bg"
        android:padding="4dp"
        android:textSize="20sp"
        />


</RelativeLayout>